improvement: make all row buttons links which open it in new browser window is possible

--- a/templates/default/event/eventlistbox_overdue.html
+++ b/templates/default/event/eventlistbox_overdue.html
@@ -37,7 +37,7 @@
     </thead>
     <tbody id="overdue-events-panel" style="display: none;">
         {foreach $overdue_events as $event}
-            {include file="event/eventlistboxrow.html" overdue=1}
+            {include file="event/eventlistboxrow.html" overdue=1 backid="event-all"}
         {/foreach}
     </tbody>
 </table>
