--- a/templates/default/event/eventlistbox.html
+++ b/templates/default/event/eventlistbox.html
@@ -44,7 +44,7 @@
     <TBODY class="event-day" data-event-day="{$day}">
         {foreach $eventlist as $event}
         {if $event.date == $day && !isset($event.hide)}
-            {include file="event/eventlistboxrow.html"}
+            {include file="event/eventlistboxrow.html" backid="event-day-{$day}"}
         {/if}
         {/foreach}
     </TBODY>
