--- a/templates/default/event/eventlistboxrow.html
+++ b/templates/default/event/eventlistboxrow.html
@@ -99,17 +99,17 @@
                     {if ($event.closed)}
                         {$allow_modify = intval(ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800))}
                         {if !$allow_modify || ($smarty.now - $event.closeddate < $allow_modify) || ConfigHelper::checkPrivilege('superuser')}
-                            {button type="link" icon="open" onclick="location.href = '?m=eventedit&id={$event.id}&action=open&backid=' + $(this).closest('.event-day-table').attr('id');" tip="Open"}
+                            {button type="link" icon="open" href="?m=eventedit&id={$event.id}&action=open&backid={$backid}" tip="Open"}
                         {/if}
                     {else}
                         {if $imadded}
-                            {button type="link" icon="owner" onclick="location.href = '?m=eventedit&id={$event.id}&action=unassign&backid=' + $(this).closest('.event-day-table').attr('id');" tip="<!event>Unassign"}
+                            {button type="link" icon="owner" href="?m=eventedit&id={$event.id}&action=unassign&backid={$backid}" tip="<!event>Unassign"}
                         {else}
-                            {button type="link" icon="owner" onclick="location.href = '?m=eventedit&id={$event.id}&action=assign&backid=' + $(this).closest('.event-day-table').attr('id');" tip="<!event>Assign"}
+                            {button type="link" icon="owner" href="?m=eventedit&id={$event.id}&action=assign&backid={$backid}" tip="<!event>Assign"}
                         {/if}
-                        {button type="link" icon="close" onclick="location.href = '?m=eventedit&id={$event.id}&action=close&backid=' + $(this).closest('.event-day-table').attr('id');" tip="Close"}
-                        {button type="link" class="event-edit" icon="edit" onclick="location.href = '?m=eventedit&id={$event.id}&backid=' + $(this).closest('.event-day-table').attr('id');" tip="Edit"}
-                        {button type="link" icon="note" onclick="location.href = '?m=eventnote&id={$event.id}&backid=' + $(this).closest('.event-day-table').attr('id');" tip="Add Note"}
+                        {button type="link" icon="close" href="?m=eventedit&id={$event.id}&action=close&backid={$backid}" tip="Close"}
+                        {button type="link" class="event-edit" icon="edit" href="?m=eventedit&id={$event.id}&backid={$backid}" tip="Edit"}
+                        {button type="link" icon="note" href="?m=eventnote&id={$event.id}&backid={$backid}" tip="Add Note"}
                         {button type="link" icon="delete" class="delete-event" href="?m=eventdel&id={$event.id}" tip="Delete permanently"}
                     {/if}
                 {/if}
