--- a/templates/default/rt/rtticketmodify.html
+++ b/templates/default/rt/rtticketmodify.html
@@ -309,7 +309,11 @@
 			{/box_row}
 
 			{function ticket_item_content}
-				{capture name="item_content_result" assign="item_content_result"}{sprintf("#%06d", $item.id)} <a href="?m=rtticketview&id={$item.id}">{$item.name}</a>{/capture}
+				{capture name="item_content_result" assign="item_content_result"}{strip}
+					{hint icon="info" mode="toggle" url="?m=rtticketinfo&id={$item.id}"}
+					#{$item.id}
+					<a href="?m=rtticketview&id={$item.id}">{$item.name}</a>
+				{/strip}{/capture}
 			{/function}
 
 			{box_row icon="parentticket" label="Parent ticket:" icon_class="fa-fw"}
