improvement: disable delete button if given number plan is used by some existing documents (LMS+ fixes #1862)

--- a/templates/default/numberplan/numberplanlist.html
+++ b/templates/default/numberplan/numberplanlist.html
@@ -162,7 +162,7 @@
 <script>
 
 	$(function() {
-		$('.delete-numberplan:not(.disabled)').click(function () {
+		$('.delete-numberplan:not([disabled])').click(function () {
 			var name = $(this).closest('tr').attr('data-name');
 			confirmDialog($t("Are you sure, you want to delete numberplan '$a'?", name), this).done(function () {
 				location.href = $(this).attr('href');
