--- a/templates/default/invoice/invoicenotemodify.html
+++ b/templates/default/invoice/invoicenotemodify.html
@@ -107,7 +107,7 @@
 			<input type="text" name="cnote[number]" value="{$cnote.number}" size="10"
 				{tip text="Enter credit note number. WARNING! Changing this number can be DANGEROUS! (leave this field empty to obtain next number)" trigger="number"}>&nbsp;
 			{if $numberplanlist}
-				<select name="cnote[numberplanid]" {tip text="Select numbering plan"} required>
+				<select name="cnote[numberplanid]" {tip text="Select numbering plan" trigger="numberplanid"} required>
 					<option value="">{trans("- select -")}</option>
 					{foreach $numberplanlist as $plan}
 						{$period = $plan.period}
