--- a/templates/default/invoice/invoicenumberplans.html
+++ b/templates/default/invoice/invoicenumberplans.html
@@ -1,7 +1,7 @@
 <input type="text" name="invoice[number]" value="{$invoice.number}" size="12"
 	{tip text="Enter invoice number. WARNING! Changing this number can be DANGEROUS! (leave this field empty to obtain next number)" trigger="number"}>&nbsp;
 {if $numberplanlist}
-	<select name="invoice[numberplanid]" {tip text="Select numbering plan"} required>
+	<select name="invoice[numberplanid]" {tip text="Select numbering plan" trigger="numberplanid"} required>
 		<option value="">{trans("- select -")}</option>
 		{foreach $numberplanlist as $plan}
 			{$period = $plan.period}
