enhancement: new tickets panel in customerinfo form

--- a/templates/default/customer/customerinfo.html
+++ b/templates/default/customer/customerinfo.html
@@ -40,6 +40,9 @@
 {block name="customerevents"}
 	{include file="customer/customerevents.html" limit=10}
 {/block}
+{block name="customertickets"}
+	{include file="customer/customertickets.html"}
+{/block}
 {block name="customergroups"}
 	{include file="customer/customergroups.html"}
 {/block}
