--- a/templates/default/note/note.html
+++ b/templates/default/note/note.html
@@ -135,7 +135,7 @@
 <TABLE WIDTH="100%" CELLPADDING="3">
 	<TR>
 		<TD WIDTH="50%" ALIGN="RIGHT" CLASS="hdf">
-			{trans("To pay:")} {moneyf($note.value, $note.currency)}
+			{t a=moneyf($note.value, $note.currency)}To pay: $a{/t}
 		</TD>
 	</TR>
 	<TR>
