--- a/templates/default/invoice/invoice.html
+++ b/templates/default/invoice/invoice.html
@@ -494,16 +494,17 @@
     {/if}
     {if $show_balance_summary}
         <tr>
-            <td colspan="2">
+            <td colspan="2" style="padding-bottom: 1em;">
                 {trans('Previous balance: $a $b', moneyf(-$expired_customerbalance / $invoice.currencyvalue, $invoice.currency), $comment)}
                 <br>
-                {if $use_alert_color}
-                    <span style="color: red;">
+                {if $total_customerbalance >= 0}
+                    {$total_to_pay = 0}
+                {else}
+                    {$total_to_pay = -$total_customerbalance / $invoice.currencyvalue}
                 {/if}
-                {trans('Total to pay: $a', moneyf($total_customerbalance >= 0 ? 0 : (-$total_customerbalance / $invoice.currencyvalue), $invoice.currency))}
-                {if $use_alert_color}
-                    </span>
-                {/if}
+                <span style="font-size: 180%; font-weight: bold; display: inline-block; margin-top: 0.3em;{if $use_alert_color} color: red;{/if}">
+                    {trans('Total to pay: $a', moneyf($total_to_pay, $invoice.currency))}
+                </span>
             </td>
         </tr>
     {else}
