--- a/templates/default/user/userinfobox.html
+++ b/templates/default/user/userinfobox.html
@@ -335,6 +335,7 @@
 					{button label="Force password change" icon="password" href="?m=useredit&id={$userinfo.id}&forcepasswdchange=1"}
 				{/if}
 				{button type="link-button" label="Change password" icon="password" href="?m=userpasswd&id={$userinfo.id}"}
+				{button type="link-button" label="Change network password" icon="password" href="?m=userpasswd&id={$userinfo.id}&net=1"}
 				{button type="link-button" label="User list" icon="list" href="?m=userlist"}
 			</td>
 		</tr>
