--- a/templates/default/user/userlist.html
+++ b/templates/default/user/userlist.html
@@ -103,6 +103,7 @@
 				{/if}
 			{/if}
 			{button type="link" icon="password" tip="Change password" href="?m=userpasswd&id={$user.id}"}
+			{button type="link" icon="password" tip="Change network password" href="?m=userpasswd&id={$user.id}&net=1"}
 			{if $user.id != $layout.logid}
 				{button type="link" class="delete-user" icon="delete" tip="Delete" href="?m=userdel&id={$user.id}"}
 			{/if}
